--- a/css/styleDark.css
+++ b/css/styleDark.css
@@ -1,3 +1,63 @@
+/**** DARK THEME COLOURS****/
+
+body {
+/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#20222f+0,20222f+0,1d2029+37 */
+background: #20222f; /* Old browsers */
+background: -moz-linear-gradient(top,  #20222f 0%, #20222f 0%, #1d2029 37%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #20222f 0%,#20222f 0%,#1d2029 37%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #20222f 0%,#20222f 0%,#1d2029 37%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#20222f', endColorstr='#1d2029',GradientType=0 ); /* IE6-9 */
+}
+
+p {
+    color: hsl(228, 34%, 66%);
+}
+
+nav p {
+    color: hsl(228, 12%, 44%);
+}
+
+#toggleBall {
+    background-color: #353A58;
+}
+
+.cardsLarge {
+    background-color: #252B43;
+}
+
+
+#instaCardCover {
+    background-color: #252B43;
+}
+
+.updateDiv p {
+    color: hsl(163, 72%, 41%);
+}
+
+#overviewTitle {
+    color: hsl(228, 12%, 44%);
+}
+
+.overviewCards {
+    background-color: #252B43;
+}
+
+
+.positiveText {
+    color: hsl(163, 72%, 41%);
+}
+
+.negativeText {
+    color: hsl(356, 69%, 56%);
+}
+
+p.negativetext {
+    color: hsl(356, 69%, 56%)
+}
+
+
+
+
 /* GENERAL */
 
 body {
@@ -17,7 +77,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#20222f', end
 }
 
 p {
-    color: hsl(228, 34%, 66%);
     font-weight: 700;
 }
 
@@ -43,7 +102,6 @@ nav h1 {
 }
 
 nav p {
-    color: hsl(228, 12%, 44%);
     font-weight: 700;
     font-size: 0.9em;
     margin: 0;
@@ -80,198 +138,180 @@ hr.solid {
     margin: 4.5px;
     height: 62%;
     width: 15px;
-    background-color: #353A58;
 }
 
 .ballToRight {
     transform: translate(20px);
 }
-    /* CARDS LARGE */
+/* CARDS LARGE */
 
-    /* Cards Design */
+/* Cards Design */
 
-    .cardsLargeDiv {
+.cardsLargeDiv {
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
 
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
+.cardsLarge {
+    border-radius: 5px;
+    margin: 5px;
+    width: 100%;
+    height: 200px;
+    transition: all 0.2s ease-in-out;
+}
 
-    .cardsLarge {
-        border-radius: 5px;
-        margin: 12px auto;
-        width: 100%;
-        height: 200px;
-        background-color: #252B43;
-        transition: all 0.2s ease-in-out;
-    }
+.cardsLarge:hover {
+    transform: scale(1.15);
+}
 
-    .cardsLarge:hover {
-        transform: scale(1.15);
-    }
+#fbCard {
+    border-top: 4px solid hsl(203, 89%, 53%);
+}
 
-    #fbCard {
-        border-top: 4px solid hsl(203, 89%, 53%);
-    }
+#twCard {
+    border-top: 4px solid hsl(195, 100%, 50%);
+}
 
-    #twCard {
-        border-top: 4px solid hsl(195, 100%, 50%);
-    }
+/* Insta Card */
+#inCard {
+    transition: all 0.2s ease-in-out;
+    background-image: linear-gradient(to right, hsl(37, 97%, 70%),hsl(329, 70%, 58%));
+}
 
-    /* Insta Card */
-    #inCard {
-        transition: all 0.2s ease-in-out;
-        background-image: linear-gradient(to right, hsl(37, 97%, 70%),hsl(329, 70%, 58%));
-    }
+#instaCardCover {
+    transition: all 0.2s ease-in-out;
+    margin-top: 4px;
+    border-radius: 5px;
+    width: 100%;
+    height: 200px;
+}
 
-    #instaCardCover {
-        transition: all 0.2s ease-in-out;
-        margin-top: 4px;
-        border-radius: 5px;
-        width: 100%;
-        height: 200px;
-        background-color: #252B43;
-    }
+#youCard {
+    border-top: 4px solid hsl(348, 97%, 39%);
+}
 
-    #youCard {
-        border-top: 4px solid hsl(348, 97%, 39%);
-    }
+/* Cards Content */
 
-    /* Cards Content */
-    
-    .iconHandleDiv {
-        padding-top: 20px;
-        display: flex;
-        justify-content: center;
-    }
+.iconHandleDiv {
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+}
 
-    .icon {
-        margin-top: 8px;
-        margin-right: 7.5px;
-        height: 20px;
-    }
+.icon {
+    margin-top: 8px;
+    margin-right: 7.5px;
+    height: 20px;
+}
 
-    .handle {
-        font-size: 0.7em;
-    }
+.handle {
+    font-size: 0.7em;
+}
 
-    .followersDiv {
-        margin-top: 3px;
-        text-align: center;
-        justify-content: center;
-    }
+.followersDiv {
+    margin-top: 3px;
+    text-align: center;
+    justify-content: center;
+}
 
-    .followersDiv h1 {
-        font-size: 3.5em;
-        font-weight: 700;
-        margin: 0;
-    }
+.followersDiv h1 {
+    font-size: 3.5em;
+    font-weight: 700;
+    margin: 0;
+}
 
-    .followersDiv p {
-        margin: 0;
-        font-weight: 400;
-        font-size: 0.8em;
-        letter-spacing: 0.3em;
-    }
+.followersDiv p {
+    margin: 0;
+    font-weight: 400;
+    font-size: 0.8em;
+    letter-spacing: 0.3em;
+}
 
-    .updateDiv {
-        margin-top: 20px;
-        display: flex;
-        justify-content: center;
-    }
+.updateDiv {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
 
-    .upArrow {
-        margin-top: 6px;
-        margin-right: 5px;;
-        height: 4px;
-    }
+.upArrow {
+    margin-top: 6px;
+    margin-right: 5px;;
+    height: 4px;
+}
 
-    .updateDiv p {
-        margin: 0;
-        color: hsl(163, 72%, 41%);
-        font-size: 0.75em;
-    }
+.updateDiv p {
+    margin: 0;
+    font-size: 0.75em;
+}
 
-    /* OVERVIEW */
+/* OVERVIEW */
 
-    #overviewTitle {
-        margin-top: 25px;
-        font-size: 1.5em;
-        color: hsl(228, 12%, 44%);
-        font-weight: 700;
-        height: 30px;
-    }
+#overviewTitle {
+    margin-top: 25px;
+    font-size: 1.5em;
+    font-weight: 700;
+    height: 30px;
+}
 
-    .overviewCardsDiv {
-        margin-top: 20px;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
+.overviewCardsDiv {
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
 
-    .overviewCards {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border-radius: 5px;
-        margin: 10px auto;
-        width: 100%;
-        height: 125px;
-        background-color: #252B43;
-        transition: all 0.2s ease-in-out;
-    }
+.overviewCards {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 5px;
+    margin: 10px auto;
+    width: 100%;
+    height: 125px;
+    transition: all 0.2s ease-in-out;
+}
 
-    .overviewCards h2 {
-        margin-top: 26.560px;
-        font-size: 2em;
-    }
+.overviewCards h2 {
+    margin-top: 26.560px;
+    font-size: 2em;
+}
 
-    .overviewCards:hover {
-        transform: scale(1.15);
-    }
+.overviewCards:hover {
+    transform: scale(1.15);
+}
 
-    .overviewLeft {
-        height: 70%;
-        margin-left: 20px;
-        margin-top: 5px;
-    }
+.overviewLeft {
+    height: 70%;
+    margin-left: 20px;
+    margin-top: 5px;
+}
 
-    .overviewLeft p {
-        margin: 0;
-    }
+.overviewLeft p {
+    margin: 0;
+}
 
-    .overviewRight {
-        text-align: center;
-        margin-top: 30px;
-        margin-right: 20px;
-        height: 100%;
-    }
+.overviewRight {
+    text-align: center;
+    margin-top: 30px;
+    margin-right: 20px;
+    height: 100%;
+}
 
-    .overviewRight p {
-        margin-top: 35px;
-        font-size: 0.75em;
-    }
+.overviewRight p {
+    margin-top: 35px;
+    font-size: 0.75em;
+}
 
-    .positiveText {
-        color: hsl(163, 72%, 41%);
-    }
+.overviewCards img {
+    margin-right: 0;
+    text-align: center;
+}
 
-    .negativeText {
-        color: hsl(356, 69%, 56%);
-    }
-
-    p.negativetext {
-       color: hsl(356, 69%, 56%)
-    }
-
-    .overviewCards img {
-        margin-right: 0;
-        text-align: center;
-    }
-
-    img.overviewArrow {
-        padding: 3px;
-    }
+img.overviewArrow {
+    padding: 3px;
+}
 /* FOOTER */
 
 .attribution {
@@ -311,6 +351,7 @@ hr.solid {
     }
 
     .cardsLargeDiv {
+        text-align: center;
         margin-top: 60px;
         display: flex;
         justify-content: space-evenly;
